# searchloinc

./: .env.example  .gitignore  .mcp.json  CAIRN.md  CLAUDE.md  NOTICE  README.md  cairn.config.json  pyproject.toml
.claude/: settings.json
.claude/skills/loinc-search/: SKILL.md
plans/: 2026-07-06-agent-facing-wrapper-shape.md  2026-07-07-facet-followups.md  2026-07-07-uv-tool-install-entrypoint.md
searchloinc/: __init__.py  __main__.py  client.py  config.py  render.py  server.py
tests/: test_render.py  test_server.py
tests/fixtures/: answerlists_smoking.json  groups_glucose.json  loincs_783-1.json  loincs_glucose_facets.json  parts_hemoglobin.json
