[project]
name = "searchloinc"
version = "0.1.0"
description = "Thin MCP server wrapping the LOINC Search API for LLM search."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "toon-format>=0.9.0b1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[project.scripts]
searchloinc = "searchloinc.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
